@startuml
' Modules
package "q_block" {
  package "modules" {
    class "SpinOrbital" {
      - n:int
      - l:int
      - m:int
      - s:float
      - occupied:bool
      - data:Any
    }
    class "Orbital" {
      - spin_up:SpinOrbital
      - spin_down:SpinOrbital
    }
    class "SubShell" {
      - n:int
      - l:int
      - orbitals: List&lt;Orbital&gt;
      + capacity(): int
    }
    class "Shell" {
      - n:int
      - subshells: List&lt;SubShell&gt;
    }
    class "Atom" {
      - Z:int
      - shells: Dict&lt;int,Shell&gt;
      - _all_subshells: List&lt;SubShell&gt;
      - basis_set: Optional[Dict]
      + fill_occupancy(): None
      + populate_spinorbitals_with_gto(): None
    }
  }
}

' Relationships (composition / uses)
"Atom" "1" *--> "*" "Shell"
"Shell" "1" *--> "*" "SubShell"
"SubShell" "1" *--> "*" "Orbital"
"Orbital" "1" *--> "2" "SpinOrbital"

@enduml